--- a/model_experiements/neural_network_cv.ipynb
+++ b/model_experiements/neural_network_cv.ipynb
@@ -1392,7 +1392,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Language Detection: 100%|██████████| 64577/64577 [18:53<00:00, 56.99it/s]\n"
+      "Language Detection: 100%|██████████| 64577/64577 [17:20<00:00, 62.06it/s]\n"
      ]
     },
     {
@@ -2418,7 +2418,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing News Articles: 100%|██████████| 63860/63860 [11:51<00:00, 89.70it/s] \n"
+      "Processing News Articles: 100%|██████████| 63860/63860 [11:35<00:00, 91.78it/s] \n"
      ]
     },
     {
@@ -2573,8 +2573,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first experiment with the use of a neural network for the classification task at hand.\n",
+    "\n",
+    "We use only 2 hidden layers with a dropout rate of 0.3 initially.\n",
+    "Additionally, the ADAM (Adaptive Moment Estimation) optimiser is used to adjust the weights to minimise the loss function (binary crossentropy for binary classification tasks).\n",
+    "Early stopping is implemented to prevent the tree from being overfitted.\n",
+    "Lastly, we set the number of epochs to 20, and allocate a batch size of 64."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2590,15 +2602,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 9ms/step - accuracy: 0.8994 - loss: 0.2561 - val_accuracy: 0.9597 - val_loss: 0.1110\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 11ms/step - accuracy: 0.9043 - loss: 0.2520 - val_accuracy: 0.9607 - val_loss: 0.1149\n",
       "Epoch 2/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 7ms/step - accuracy: 0.9750 - loss: 0.0748 - val_accuracy: 0.9609 - val_loss: 0.1138\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9750 - loss: 0.0733 - val_accuracy: 0.9645 - val_loss: 0.1060\n",
       "Epoch 3/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 7ms/step - accuracy: 0.9858 - loss: 0.0448 - val_accuracy: 0.9649 - val_loss: 0.1199\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9869 - loss: 0.0416 - val_accuracy: 0.9659 - val_loss: 0.1156\n",
       "Epoch 4/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 7ms/step - accuracy: 0.9915 - loss: 0.0269 - val_accuracy: 0.9656 - val_loss: 0.1412\n",
-      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9590 - loss: 0.1096\n",
-      "Test accuracy: 0.9596773982048035\n"
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9920 - loss: 0.0241 - val_accuracy: 0.9646 - val_loss: 0.1307\n",
+      "Epoch 5/20\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9937 - loss: 0.0198 - val_accuracy: 0.9667 - val_loss: 0.1512\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.9629 - loss: 0.1018\n",
+      "Test accuracy: 0.9644535183906555\n"
      ]
     }
    ],
@@ -2635,14 +2649,14 @@
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "model.compile(optimizer=Adam(learning_rate=0.001),\n",
-    "              loss='binary_crossentropy',  # Use 'categorical_crossentropy' for multi-class\n",
+    "              loss='binary_crossentropy',  \n",
     "              metrics=['accuracy'])\n",
     "\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
     "\n",
     "history = model.fit(X_train, y_train,\n",
-    "                    epochs=20,  # Adjust epochs as needed\n",
-    "                    batch_size=64,  # Experiment with batch sizes 32, 64, or 128\n",
+    "                    epochs=20, \n",
+    "                    batch_size=64, \n",
     "                    validation_data=(X_test, y_test),\n",
     "                    callbacks=[early_stopping])\n",
     "\n",
@@ -2652,34 +2666,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
-      "Accuracy: 0.9596774193548387\n",
-      "Precision: 0.9492047203694202\n",
-      "Recall: 0.9622052704576977\n",
-      "F1 Score: 0.9556607834696513\n"
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step\n",
+      "Accuracy: 0.9644534920137802\n",
+      "Precision: 0.9531036834924966\n",
+      "Recall: 0.9689667128987517\n",
+      "F1 Score: 0.9609697386519945\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
-    "y_pred_prob = model.predict(X_test)  # Get predicted probabilities\n",
-    "y_pred = (y_pred_prob > 0.5).astype(int)  # Convert probabilities to binary labels\n",
+    "y_pred_prob = model.predict(X_test) \n",
+    "y_pred = (y_pred_prob > 0.5).astype(int)  \n",
     "\n",
-    "# Step 8: Calculate Accuracy, Precision, Recall, and F1 Score\n",
+    "# Calculate Accuracy, Precision, Recall, and F1 Score\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "precision = precision_score(y_test, y_pred)\n",
     "recall = recall_score(y_test, y_pred)\n",
     "f1 = f1_score(y_test, y_pred)\n",
     "\n",
-    "# Step 9: Print the performance metrics\n",
+    "# Print the performance metrics\n",
     "print(f\"Accuracy: {accuracy}\")\n",
     "print(f\"Precision: {precision}\")\n",
     "print(f\"Recall: {recall}\")\n",
@@ -2687,18 +2701,136 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can observe from our initial run, it has unusually high performance metrics. This possibly implies overfitting, so we will try to tune the hyperparameters.\n",
+    "We lower the number of nodes for each layer from 128 to 64 and 64 to 32 respectively, and the dropout increased to 0.7.\n",
+    "We also lower the number of epochs from 20 to 5 (as well as the patience value from 3 to 2, such that early stopping is now applied after 2-3 epochs of no improvement in the validation loss) and batch size to 16 in order to introduce more noise, as model weights are now updated more frequently.\n",
+    "\n",
+    "Additionally, we also reduce the max_features parameter of the count vectorizer, as we believe that reducing the number of features may also contribute to improving the generalization of the model.\n",
+    "\n",
+    "Lastly, we use elastic net, a form of regularization that leverages the feature selection capabilities of l1 regularization, and the weight distribution smoothing capabilities of l2 regularization.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 2ms/step - accuracy: 0.5380 - loss: 9.4094 - val_accuracy: 0.7025 - val_loss: 2.4158\n",
+      "Epoch 2/5\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - accuracy: 0.6326 - loss: 1.8615 - val_accuracy: 0.7946 - val_loss: 0.9604\n",
+      "Epoch 3/5\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.7072 - loss: 0.8995 - val_accuracy: 0.8136 - val_loss: 0.6937\n",
+      "Epoch 4/5\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.7248 - loss: 0.7101 - val_accuracy: 0.8178 - val_loss: 0.6348\n",
+      "Epoch 5/5\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.7384 - loss: 0.6723 - val_accuracy: 0.8385 - val_loss: 0.6180\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8421 - loss: 0.6168\n",
+      "Test accuracy: 0.8384748101234436\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.regularizers import l2\n",
+    "from keras.regularizers import l1\n",
+    "from keras.regularizers import l1_l2\n",
+    "\n",
+    "second_run = data['processed_full_content'].apply(lambda x: x.lower())\n",
+    "vectorizer = CountVectorizer(max_features=750)\n",
+    "X_vectorized = vectorizer.fit_transform(second_run).toarray()\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_vectorized, data['label'],test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = Sequential()\n",
+    "\n",
+    "# Input layer and first hidden layer with dropout\n",
+    "model.add(Dense(32, input_dim=X_train.shape[1], activation='relu', kernel_regularizer=l1_l2(l1=0.01, l2=0.01)))\n",
+    "model.add(Dropout(0.7))\n",
+    "\n",
+    "# Second hidden layer with dropout\n",
+    "model.add(Dense(16, activation='relu', kernel_regularizer=l1_l2(l1=0.01, l2=0.01)))\n",
+    "model.add(Dropout(0.7))\n",
+    "\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(optimizer=Adam(learning_rate=0.00005),\n",
+    "              loss='binary_crossentropy',  \n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=2)\n",
+    "\n",
+    "history = model.fit(X_train, y_train,\n",
+    "                    epochs=5, \n",
+    "                    batch_size=16, \n",
+    "                    validation_data=(X_test, y_test),\n",
+    "                    callbacks=[early_stopping])\n",
+    "\n",
+    "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
+    "print(f'Test accuracy: {test_acc}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 967us/step\n",
+      "Accuracy: 0.8384747886000626\n",
+      "Precision: 0.8214471629359709\n",
+      "Recall: 0.8207350901525658\n",
+      "F1 Score: 0.8210909721619981\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_prob = model.predict(X_test) \n",
+    "y_pred = (y_pred_prob > 0.5).astype(int)  \n",
+    "\n",
+    "# Calculate Accuracy, Precision, Recall, and F1 Score\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "# Print the performance metrics\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"F1 Score: {f1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy has now gone down to 0.83847 (compared to 0.96445) which is a more reasonable result. "
+   ]
   }
  ],
  "metadata": {
