--- a/project.ipynb
+++ b/project.ipynb
@@ -3555,7 +3555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
