pushing for glove

--- a/model_experiements/LSTM_working.ipynb
+++ b/model_experiements/LSTM_working.ipynb
@@ -1058,7 +1058,103 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load and process GloVe embeddings\n",
+    "def load_glove_embeddings(glove_file, word_index, embedding_dim=100):\n",
+    "    embeddings_index = {}\n",
+    "    with open(glove_file, 'r') as f:\n",
+    "        for line in f:\n",
+    "            values = line.split()\n",
+    "            word = values[0]\n",
+    "            coefficients = np.asarray(values[1:], dtype='float32')\n",
+    "            embeddings_index[word] = coefficients\n",
+    "    embedding_matrix = np.zeros((len(word_index) + 1, embedding_dim))\n",
+    "    for word, i in word_index.items():\n",
+    "        embedding_vector = embeddings_index.get(word)\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector\n",
+    "    return embedding_matrix\n",
+    "\n",
+    "# Define LSTM model\n",
+    "def create_lstm_model(vocab_size, embedding_matrix, input_length, lstm_units=128, learning_rate=0.001):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(vocab_size, embedding_matrix.shape[1],\n",
+    "                        weights=[embedding_matrix],\n",
+    "                        input_length=input_length,\n",
+    "                        trainable=False))\n",
+    "    model.add(LSTM(units=lstm_units, return_sequences=False))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "# K-Fold Cross-Validation with Grid Search\n",
+    "def k_fold_grid_search(X, y, embedding_matrix, vocab_size, max_len, param_grid, n_splits=5):\n",
+    "    kfold = KFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "    best_accuracy = 0\n",
+    "    best_params = None\n",
+    "\n",
+    "    for lstm_units in param_grid['lstm_units']:\n",
+    "        for learning_rate in param_grid['learning_rate']:\n",
+    "            fold_accuracies = []\n",
+    "            for train_idx, val_idx in kfold.split(X):\n",
+    "                X_train, X_val = X[train_idx], X[val_idx]\n",
+    "                y_train, y_val = y[train_idx], y[val_idx]\n",
+    "\n",
+    "                # Create and compile model\n",
+    "                model = create_lstm_model(vocab_size, embedding_matrix, max_len,\n",
+    "                                          lstm_units=lstm_units, learning_rate=learning_rate)\n",
+    "                \n",
+    "                # Train model\n",
+    "                model.fit(X_train, y_train, epochs=5, batch_size=32, verbose=0)\n",
+    "                \n",
+    "                # Validate model\n",
+    "                y_pred = (model.predict(X_val) > 0.5).astype(\"int32\")\n",
+    "                fold_accuracy = accuracy_score(y_val, y_pred)\n",
+    "                fold_accuracies.append(fold_accuracy)\n",
+    "            \n",
+    "            avg_accuracy = np.mean(fold_accuracies)\n",
+    "            if avg_accuracy > best_accuracy:\n",
+    "                best_accuracy = avg_accuracy\n",
+    "                best_params = {'lstm_units': lstm_units, 'learning_rate': learning_rate}\n",
+    "    \n",
+    "    return best_params, best_accuracy\n",
+    "\n",
+    "# Example usage\n",
+    "# Load your data and tokenize it\n",
+    "texts = data[\"processed_full_content\"]\n",
+    "labels = np.array([0, 1])  \n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(texts)\n",
+    "X = tokenizer.texts_to_sequences(texts)\n",
+    "max_len = 100\n",
+    "X = pad_sequences(X, maxlen=max_len)\n",
+    "\n",
+    "# Load GloVe embeddings\n",
+    "embedding_dim = 100\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "embedding_matrix = load_glove_embeddings(\"glove.6B.100d.txt\", tokenizer.word_index, embedding_dim)\n",
+    "\n",
+    "# Define parameter grid\n",
+    "param_grid = {\n",
+    "    'lstm_units': [64, 128],\n",
+    "    'learning_rate': [0.001, 0.0001]\n",
+    "}\n",
+    "\n",
+    "# Perform grid search with k-fold\n",
+    "best_params, best_accuracy = k_fold_grid_search(X, labels, embedding_matrix, vocab_size, max_len, param_grid)\n",
+    "print(\"Best Parameters:\", best_params)\n",
+    "print(\"Best Accuracy:\", best_accuracy)\n"
+   ]
   }
  ],
  "metadata": {
